# long-int

./: .travis.yml  CMakeLists.txt  CODE_OF_CONDUCT.md  README.md  testu01.cpp
cmake/: FindTestU01.cmake  Findmpir.cmake
inc/: longLCG.hpp
src/: longLCG.cpp
test/: main.cpp
